--- a/Titanic survivors prediction using XGBOOST .ipynb
+++ b/Titanic survivors prediction using XGBOOST .ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b07ae9d4",
+   "id": "c9c9da29",
    "metadata": {},
    "source": [
     "# Titanic Survivors prediction using XGBOOST"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "7c220f19",
+   "id": "2b3dd19d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "b862592b",
+   "id": "b658f95b",
    "metadata": {},
    "outputs": [
     {
@@ -179,8 +179,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "049b9778",
+   "execution_count": 6,
+   "id": "60e4c8cf",
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +205,6 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>PassengerId</th>\n",
-       "      <th>Survived</th>\n",
        "      <th>Pclass</th>\n",
        "      <th>Name</th>\n",
        "      <th>Sex</th>\n",
@@ -221,76 +220,71 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
+       "      <td>892</td>\n",
        "      <td>3</td>\n",
-       "      <td>Braund, Mr. Owen Harris</td>\n",
+       "      <td>Kelly, Mr. James</td>\n",
        "      <td>male</td>\n",
-       "      <td>22.0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>34.5</td>\n",
        "      <td>0</td>\n",
-       "      <td>A/5 21171</td>\n",
-       "      <td>7.2500</td>\n",
+       "      <td>0</td>\n",
+       "      <td>330911</td>\n",
+       "      <td>7.8292</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>S</td>\n",
+       "      <td>Q</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Cumings, Mrs. John Bradley (Florence Briggs Th...</td>\n",
-       "      <td>female</td>\n",
-       "      <td>38.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>PC 17599</td>\n",
-       "      <td>71.2833</td>\n",
-       "      <td>C85</td>\n",
-       "      <td>C</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <td>893</td>\n",
        "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Heikkinen, Miss. Laina</td>\n",
+       "      <td>Wilkes, Mrs. James (Ellen Needs)</td>\n",
        "      <td>female</td>\n",
-       "      <td>26.0</td>\n",
+       "      <td>47.0</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>STON/O2. 3101282</td>\n",
-       "      <td>7.9250</td>\n",
+       "      <td>363272</td>\n",
+       "      <td>7.0000</td>\n",
        "      <td>NaN</td>\n",
        "      <td>S</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Futrelle, Mrs. Jacques Heath (Lily May Peel)</td>\n",
-       "      <td>female</td>\n",
-       "      <td>35.0</td>\n",
-       "      <td>1</td>\n",
+       "      <th>2</th>\n",
+       "      <td>894</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Myles, Mr. Thomas Francis</td>\n",
+       "      <td>male</td>\n",
+       "      <td>62.0</td>\n",
        "      <td>0</td>\n",
-       "      <td>113803</td>\n",
-       "      <td>53.1000</td>\n",
-       "      <td>C123</td>\n",
+       "      <td>0</td>\n",
+       "      <td>240276</td>\n",
+       "      <td>9.6875</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Q</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>895</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Wirz, Mr. Albert</td>\n",
+       "      <td>male</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>315154</td>\n",
+       "      <td>8.6625</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>S</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>0</td>\n",
+       "      <td>896</td>\n",
        "      <td>3</td>\n",
-       "      <td>Allen, Mr. William Henry</td>\n",
-       "      <td>male</td>\n",
-       "      <td>35.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>373450</td>\n",
-       "      <td>8.0500</td>\n",
+       "      <td>Hirvonen, Mrs. Alexander (Helga E Lindqvist)</td>\n",
+       "      <td>female</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3101298</td>\n",
+       "      <td>12.2875</td>\n",
        "      <td>NaN</td>\n",
        "      <td>S</td>\n",
        "    </tr>\n",
@@ -299,43 +293,36 @@
        "</div>"
       ],
       "text/plain": [
-       "   PassengerId  Survived  Pclass  \\\n",
-       "0            1         0       3   \n",
-       "1            2         1       1   \n",
-       "2            3         1       3   \n",
-       "3            4         1       1   \n",
-       "4            5         0       3   \n",
+       "   PassengerId  Pclass                                          Name     Sex  \\\n",
+       "0          892       3                              Kelly, Mr. James    male   \n",
+       "1          893       3              Wilkes, Mrs. James (Ellen Needs)  female   \n",
+       "2          894       2                     Myles, Mr. Thomas Francis    male   \n",
+       "3          895       3                              Wirz, Mr. Albert    male   \n",
+       "4          896       3  Hirvonen, Mrs. Alexander (Helga E Lindqvist)  female   \n",
        "\n",
-       "                                                Name     Sex   Age  SibSp  \\\n",
-       "0                            Braund, Mr. Owen Harris    male  22.0      1   \n",
-       "1  Cumings, Mrs. John Bradley (Florence Briggs Th...  female  38.0      1   \n",
-       "2                             Heikkinen, Miss. Laina  female  26.0      0   \n",
-       "3       Futrelle, Mrs. Jacques Heath (Lily May Peel)  female  35.0      1   \n",
-       "4                           Allen, Mr. William Henry    male  35.0      0   \n",
-       "\n",
-       "   Parch            Ticket     Fare Cabin Embarked  \n",
-       "0      0         A/5 21171   7.2500   NaN        S  \n",
-       "1      0          PC 17599  71.2833   C85        C  \n",
-       "2      0  STON/O2. 3101282   7.9250   NaN        S  \n",
-       "3      0            113803  53.1000  C123        S  \n",
-       "4      0            373450   8.0500   NaN        S  "
+       "    Age  SibSp  Parch   Ticket     Fare Cabin Embarked  \n",
+       "0  34.5      0      0   330911   7.8292   NaN        Q  \n",
+       "1  47.0      1      0   363272   7.0000   NaN        S  \n",
+       "2  62.0      0      0   240276   9.6875   NaN        Q  \n",
+       "3  27.0      0      0   315154   8.6625   NaN        S  \n",
+       "4  22.0      1      1  3101298  12.2875   NaN        S  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Testing DaTa\n",
-    "test_df = pd.read_csv('datasets/train.csv')\n",
+    "test_df = pd.read_csv('datasets/test.csv')\n",
     "test_df.head()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5959e07d",
+   "id": "d09e67e3",
    "metadata": {},
    "outputs": [],
    "source": []
